create github pages

--- a/medicaleyecare.html
+++ b/medicaleyecare.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Builder</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-1q" style="background-color: rgb(8, 139, 139); padding-top: 90px; padding-bottom: 60px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Creator</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-1q" style="background-color: rgb(8, 139, 139); padding-top: 90px; padding-bottom: 60px;">
 
     
     <div class="container">
@@ -87,7 +87,7 @@
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">MEDICAL EYE CARE<br></h3>
                 <div class="lead"><p><strong>Diagnosis and Treatment of Eye Disease</strong></p><p>Dr. Nguyen is a therapeutic optometrist, board-certified to diagnose and treat many eye diseases. At Woodbridge Eye Care we providecomprehensive care for many conditions that affect the eyes. Examples of medical conditions include:</p><p>Dry eyes </p><p>Glaucoma</p><p>Macular degeneration  </p><p>Diabetes examinations </p><p>Ocular allergies</p><p>Cataracts Eye infections</p></div>
-                <div><a class="btn btn-info" href="https://mobirise.com">CLICK FOR MORE ON DRY EYES, GLAUCOMA, MACULAR DEGENERATION, DIABETES EXAMINATIONS</a></div>
+                <div><a class="btn btn-info" href="medicaleyecare2.html">CLICK FOR MORE ON DRY EYES, GLAUCOMA, MACULAR DEGENERATION, DIABETES EXAMINATIONS</a></div>
             </div>
         </div>
     </div>
