--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">ABOUT&nbsp;</a><div class="dropdown-menu"><a class="dropdown-item" href="DrAnnyNguyen..html">Meet Dr. Nguyen<br></a><a class="dropdown-item" href="OurStaff.html">Our Staff</a></div></li><li class="nav-item"><a class="nav-link link" href="Services.html">SERVICES</a></li><li class="nav-item"><a class="nav-link link" href="Technology.html">TECHNOLOGY</a></li><li class="nav-item"><a class="nav-link link" href="Insurances.html">INSURANCE</a></li><li class="nav-item"><a class="nav-link link" href="forms.html">FORMS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">ABOUT&nbsp;</a><div class="dropdown-menu"><a class="dropdown-item" href="DrAnnyNguyen..html">Meet Dr. Nguyen<br></a><a class="dropdown-item" href="OurStaff.html">Our Staff</a></div></li><li class="nav-item"><a class="nav-link link" href="Services.html">SERVICES</a></li><li class="nav-item"><a class="nav-link link" href="Technology.html">TECHNOLOGY</a></li><li class="nav-item"><a class="nav-link link" href="Insurances.html">INSURANCE</a></li><li class="nav-item"><a class="nav-link link" href="forms.html">FORMS</a></li><li class="nav-item"><a class="nav-link link" href="Contactus.html">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-o" style="background-color: rgb(8, 139, 139); padding-top: 90px; padding-bottom: 60px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-o" style="background-color: rgb(8, 139, 139); padding-top: 90px; padding-bottom: 60px;">
 
     
     <div class="container">
@@ -190,7 +190,7 @@
                 </div>
 
                 <div class="mbr-table-cell col-md-4">
-                    <div class="text-xs-center"><a class="btn btn-secondary" href="www.irvingeyedoctors.com">IRVING EYE ASSOCIATES</a></div>
+                    <div class="text-xs-center"><a class="btn btn-info" href="http://www.irvingeyedoctors.com">IRVING EYE ASSOCIATES</a></div>
                 </div>
             </div>
 
