--- a/mapanddirections.html
+++ b/mapanddirections.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">ABOUT&nbsp;</a><div class="dropdown-menu"><a class="dropdown-item" href="DrAnnyNguyen..html">Meet Dr. Nguyen<br></a><a class="dropdown-item" href="OurStaff.html">Our Staff</a></div></li><li class="nav-item"><a class="nav-link link" href="Services.html">SERVICES</a></li><li class="nav-item"><a class="nav-link link" href="Technology.html">TECHNOLOGY</a></li><li class="nav-item"><a class="nav-link link" href="Insurances.html">INSURANCE</a></li><li class="nav-item"><a class="nav-link link" href="forms.html">FORMS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">ABOUT&nbsp;</a><div class="dropdown-menu"><a class="dropdown-item" href="DrAnnyNguyen..html">Meet Dr. Nguyen<br></a><a class="dropdown-item" href="OurStaff.html">Our Staff</a></div></li><li class="nav-item"><a class="nav-link link" href="Services.html">SERVICES</a></li><li class="nav-item"><a class="nav-link link" href="Technology.html">TECHNOLOGY</a></li><li class="nav-item"><a class="nav-link link" href="Insurances.html">INSURANCE</a></li><li class="nav-item"><a class="nav-link link" href="forms.html">FORMS</a></li><li class="nav-item"><a class="nav-link link" href="Contactus.html">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Generator</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-3k" style="background-color: rgb(8, 139, 139); padding-top: 90px; padding-bottom: 60px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Generator</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-4i" style="background-color: rgb(8, 139, 139); padding-top: 90px; padding-bottom: 60px;">
 
     
     <div class="container">
@@ -68,7 +68,7 @@
             <div class="mbr-table-md-up">
               <div class="mbr-table-cell mbr-right-padding-md-up col-md-8 text-xs-center text-md-left">
                   <h3 class="mbr-info-title mbr-section-title display-2">WOODBRIDGE EYE CARE</h3>
-                  <h2 class="mbr-info-subtitle mbr-section-subtitle">3460 W. FM 544 Suite #550 Wylie, TX 75098</h2>
+                  <h2 class="mbr-info-subtitle mbr-section-subtitle">3460 W. FM 544 Suite #550 Wylie, TX 75098<br>(972) 429-3501&nbsp;</h2>
               </div>
               <div class="mbr-table-cell col-md-4">
                   
@@ -83,7 +83,7 @@
     <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJpUG93UMbTIYRMVd3YKvECLA" allowfullscreen=""></iframe></div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-3n" style="background-color: rgb(160, 126, 73); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container" id="buttons1-4h" style="background-color: rgb(160, 126, 73); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
