create github pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-o" style="background-color: rgb(8, 139, 139); padding-top: 90px; padding-bottom: 60px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-o" style="background-color: rgb(8, 139, 139); padding-top: 90px; padding-bottom: 60px;">
 
     
     <div class="container">
@@ -185,7 +185,7 @@
 
             <div class="mbr-table-md-up">
                 <div class="mbr-table-cell mbr-right-padding-md-up col-md-8 text-xs-center text-md-left">
-                    <h2 class="mbr-info-subtitle mbr-section-subtitle">We are very excited to announce the that we will be soon serving the Irving community with our sister office!</h2>
+                    <h2 class="mbr-info-subtitle mbr-section-subtitle">We are excited to announce that we will be serving the Irving community with our sister location!</h2>
                     
                 </div>
 
