--- a/DrAnnyNguyen..html
+++ b/DrAnnyNguyen..html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-3t" style="background-color: rgb(8, 139, 139); padding-top: 90px; padding-bottom: 60px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-3t" style="background-color: rgb(8, 139, 139); padding-top: 90px; padding-bottom: 60px;">
 
     
     <div class="container">
@@ -77,6 +77,18 @@
 
         </div>
     </div>
+</section>
+
+<section class="mbr-section mbr-section__container" id="buttons1-4k" style="background-color: rgb(160, 126, 73); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="text-xs-center"> <a class="btn btn-black btn-black-outline" href="https://reviews.solutionreach.com/vs/woodbridge_eye_care">REVIEWS</a> <a class="btn btn-black btn-black-outline" href="https://reviews.solutionreach.com/vs/woodbridge_eye_care/appt">MAKE AN APPOINTMENT</a> <a class="btn btn-black btn-black-outline" href="mapanddirections.html">MAP AND DIRECTIONS</a></div>
+            </div>
+        </div>
+    </div>
+
 </section>
 
 <section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header2-v" style="background-image: url(assets/images/mbr-2000x1125.jpg);">
@@ -116,19 +128,7 @@
         </div>
     </div>
 
-    <div class="mbr-arrow mbr-arrow-floating hidden-sm-down" aria-hidden="true"><a href="#buttons1-3s"><i class="mbr-arrow-icon"></i></a></div>
-
-</section>
-
-<section class="mbr-section mbr-section__container" id="buttons1-3s" style="background-color: rgb(160, 126, 73); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="text-xs-center"> <a class="btn btn-black btn-black-outline" href="https://reviews.solutionreach.com/vs/woodbridge_eye_care">REVIEWS</a> <a class="btn btn-black btn-black-outline" href="forms.html">PATIENT FORMS</a> <a class="btn btn-black btn-black-outline" href="mapanddirections.html">MAP AND DIRECTIONS</a></div>
-            </div>
-        </div>
-    </div>
+    <div class="mbr-arrow mbr-arrow-floating hidden-sm-down" aria-hidden="true"><a href="#contacts1-13"><i class="mbr-arrow-icon"></i></a></div>
 
 </section>
 
