create github pages

--- a/DrAnnyNguyen..html
+++ b/DrAnnyNguyen..html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">ABOUT&nbsp;</a><div class="dropdown-menu"><a class="dropdown-item" href="DrAnnyNguyen..html">Meet Dr. Nguyen<br></a><a class="dropdown-item" href="OurStaff.html">Our Staff</a></div></li><li class="nav-item"><a class="nav-link link" href="Services.html">SERVICES</a></li><li class="nav-item"><a class="nav-link link" href="Technology.html">TECHNOLOGY</a></li><li class="nav-item"><a class="nav-link link" href="Insurances.html">INSURANCE</a></li><li class="nav-item"><a class="nav-link link" href="forms.html">FORMS</a></li><li class="nav-item"><a class="nav-link link" href="Contactus.html">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">ABOUT&nbsp;</a><div class="dropdown-menu"><a class="dropdown-item" href="DrAnnyNguyen..html">Meet Dr. Nguyen<br></a><a class="dropdown-item" href="OurStaff.html">Our Staff</a></div></li><li class="nav-item"><a class="nav-link link" href="Services.html">SERVICES</a></li><li class="nav-item"><a class="nav-link link" href="Technology.html">TECHNOLOGY</a></li><li class="nav-item"><a class="nav-link link" href="Insurances.html">INSURANCE</a></li><li class="nav-item"><a class="nav-link link" href="forms.html">FORMS</a></li><li class="nav-item"><a class="nav-link link" href="Contactus.html">CONTACT</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html">MAKE AN APPOINTMENT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -77,18 +77,6 @@
 
         </div>
     </div>
-</section>
-
-<section class="mbr-section mbr-section__container" id="buttons1-4k" style="background-color: rgb(160, 126, 73); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="text-xs-center"> <a class="btn btn-black btn-black-outline" href="https://reviews.solutionreach.com/vs/woodbridge_eye_care">REVIEWS</a> <a class="btn btn-black btn-black-outline" href="https://reviews.solutionreach.com/vs/woodbridge_eye_care/appt">MAKE AN APPOINTMENT</a> <a class="btn btn-black btn-black-outline" href="mapanddirections.html">MAP AND DIRECTIONS</a></div>
-            </div>
-        </div>
-    </div>
-
 </section>
 
 <section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header2-v" style="background-image: url(assets/images/mbr-2000x1125.jpg);">
@@ -128,7 +116,19 @@
         </div>
     </div>
 
-    <div class="mbr-arrow mbr-arrow-floating hidden-sm-down" aria-hidden="true"><a href="#contacts1-13"><i class="mbr-arrow-icon"></i></a></div>
+    <div class="mbr-arrow mbr-arrow-floating hidden-sm-down" aria-hidden="true"><a href="#buttons1-4m"><i class="mbr-arrow-icon"></i></a></div>
+
+</section>
+
+<section class="mbr-section mbr-section__container" id="buttons1-4m" style="background-color: rgb(160, 126, 73); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="text-xs-center"> <a class="btn btn-black btn-black-outline" href="https://reviews.solutionreach.com/vs/woodbridge_eye_care">REVIEWS</a> <a class="btn btn-black btn-black-outline" href="forms.html">PATIENT FORMS</a> <a class="btn btn-black btn-black-outline" href="mapanddirections.html">MAP AND DIRECTIONS</a></div>
+            </div>
+        </div>
+    </div>
 
 </section>
 
