create github pages

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 </div>
 
                 <div class="mbr-table-cell col-md-4">
-                    <div class="text-xs-center"><a class="btn btn-secondary" href="http://www.irvingeyedoctors.com">IRVING EYE ASSOCIATES</a></div>
+                    <div class="text-xs-center"><a class="btn btn-white" href="http://www.irvingeyedoctors.com">IRVING EYE ASSOCIATES</a></div>
                 </div>
             </div>
 
