--- a/DrAnnyNguyen..html
+++ b/DrAnnyNguyen..html
@@ -33,7 +33,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <span class="navbar-logo"><img src="assets/images/screen-shot-2017-01-20-at-8-253x128.png" alt="Mobirise"></span>
+                        <span class="navbar-logo"><img src="assets/images/24-273x128.png" alt="Mobirise"></span>
                         
                     </div>
 
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-57" style="background-color: rgb(8, 139, 139); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-57" style="background-color: rgb(8, 139, 139); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -136,10 +136,10 @@
     <div class="container">
         <div class="row">
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <div><img src="assets/images/screen-shot-2017-01-20-at-8-128x64.png"></div>
+                <div><img src="assets/images/24-128x60.png"></div>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Address</strong><br>3460 W. FM 544 Suite #550<br>Wylie, TX 75098<br></p>
+                <p><strong>Address</strong><br>Woodbridge Crossing Shopping Center<br>3460 W. FM 544 Suite #550<br>Wylie, TX 75098<br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><strong>Contacts</strong><br>
