--- a/ContactLens.html
+++ b/ContactLens.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Generator</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-5b" style="background-color: rgb(8, 139, 139); padding-top: 120px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-5b" style="background-color: rgb(8, 139, 139); padding-top: 120px; padding-bottom: 0px;">
 
     
     <div class="container">
